# django-copier-template

./: .gitignore  .pre-commit-config.yaml  README.md  copier.yaml  pyproject.toml  secrets.jinja  settings.yaml.jinja
tests/: build.sh  defaults.yaml
{{project_slug}}/: .env.example.jinja  .env.jinja  .gitignore.jinja  .pre-commit-config.yaml.jinja  Dockerfile.jinja  Makefile.jinja  docker-compose.yml.jinja  manage.py.jinja  pyproject.toml.jinja
{{project_slug}}/core/api/{% if api == 'drf' %}v1{% endif %}/: urls.py
{{project_slug}}/core/api/{% if api == 'drf' %}v1{% endif %}/views/: ping.py
{{project_slug}}/core/api/{% if api == 'ninja' %}v1{% endif %}/: handlers.py
{{project_slug}}/core/apps/{% if api == 'drf' %}api{% endif %}/v1/: urls.py
{{project_slug}}/core/apps/{% if api == 'ninja' %}api{% endif %}/: urls.py
{{project_slug}}/core/apps/{% if api_framework == 'drf' %}api{% endif %}/: urls.py
{{project_slug}}/core/apps/{% if custom_auth %}authauth{% endif %}/: admin.py  apps.py  models.py
{{project_slug}}/core/apps/{% if custom_auth %}authauth{% endif %}/migrations/: 0001_initial.py
{{project_slug}}/core/project/: asgi.py.jinja  urls.py.jinja  wsgi.py.jinja
{{project_slug}}/core/project/management/commands/: create_admin.py  create_admin.py.jinja  (+1 more)
{{project_slug}}/core/project/settings/: __init__.py  base.py.jinja  development.py
{{project_slug}}/core/{% if api %}api{% endif %}/{% if api_type == 'ninja' %}v1{% endif %}/: schemas.py  urls.py
{{project_slug}}/data/: users.json.jinja
{{project_slug}}/tests/integration/api/: test_api_ping.py
(+5 files in other folders)
